fixed toolbar button margins in jdk 1.4.2.

modified the attachment filechooser to select for multiple files, now that
that's supported in swing.

added status messages while sending new messages.  this is to make sure that
users always know what the status of their outgoing messages is.

moved much of the send message code from the AWTEventThread to the 
OutgoingMailServer thread.

up and down arrows on ReadMessageWindows now scroll the ScrollPane.  

fixed the handling of incorrectly-formed multipart/alternative messages so 
that we display the content.

changed the default UserProfile handling so that if a message doesn't have 
a default UserProfile set, we use the default instead of returning null.

put in another check to try to avoid sending multiple copies of one message.

modified the resizing code for message tables so that we now just resize
the next column.

changed the display for some error message so that there's acutally a 
space between the message and the error code.

fixed a bug in which some message contents wouldn't should up in raw mode.

modified Attachment handing some so that we should now handle misconfigured
emails a little bit better.

no longer have to restart for change in IMAP synch with subscribed folders
setting.

added support for IMAP shared folders. -- tentative on javamail fix.

fixed the StoreInfo so that we now properly use the custom port for
IMAP/SSL.

fixed the FullMailcapCommandMap so that we support custom DataContentHandlers
now.

fixed a bug in the Attachment handling where an incorrectly-formed encoding
would lead to a NullPointerException.

modified the loading of table display infos so that we now don't fail 
totally if a particular field gets an exception.

added a search/filter for arbitrary message headers.

if a folder becomes disconnected, we now pre-emptively check the store to
see if it's connected.

030613 release
--------------
fixed a bug where reopening a pop folder could result in a StackOverflowError.
