@@ -274,6 +274,7 @@ info.sendMessage.addingAttachment.2= of
 info.sendMessage.savingChangesToMessage=Saving changes to message...
 info.sendMessage.encryptMessage=Handing encryption...
 info.sendMessage.sendingMessage=Sending message to mailserver...
+info.sendMessage.alreadySendingMessage=Already sending message.
 
 info.smtpServer.connecting=Connecting to SMTP server...
 info.smtpServer.outbox.connecting=SMTP server not available; getting outbox.
